# Django-VueJS-Docker-Test

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.yml  frontend.yml  postgres.yml  pyproject.toml
core/api/: urls.py
core/api/v1/: schemas.py  urls.py
core/api/v1/images/: serializers.py
core/api/v1/images/add_image/: handler.py  handlers.py  schemas.py
core/api/v1/images/get_images/: handlers.py  schemas.py
core/api/v1/images/handlers/: add_image.py  get_images.py  remove_image.py
core/api/v1/images/remove_images/: handlers.py  schemas.py
core/apps/common/: exceptions.py
core/apps/images/: admin.py  apps.py  entities.py  enums.py  exceptions.py  models.py  services.py
core/apps/images/migrations/: 0001_initial.py  0002_rename_images_ormimages.py  0003_rename_encoded_image_ormimages_base64_payload_and_more.py
core/project/: asgi.py  containers.py  urls.py  wsgi.py
core/project/settings/: main.py
core/project/settings/configs/: __init__.py  database.py  django.py
frontend/: nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  axios.js  main.js
frontend/src/components/: ImageForm.vue  ImageList.vue
tests/: conftest.py
tests/e2e/: add_image_test.py  conftest.py  get_images_test.py  remove_image_by_id_test.py
tests/unit/: conftest.py  image_entity_test.py  images_service_test.py
