[tool.black]
target-version = ["py312"]
line-length = 85

[tool.isort]
lines_between_types = 1
combine_as_imports = true
sections = [
    "FUTURE",
    "STDLIB",
    "FIRSTPARTY",
    "THIRDPARTY",
    "AIRFLOW",
    "LOCALFOLDER",
]
known_airflow = ["airflow"]
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true
extra_standard_library = ["typing_extensions"]
known_third_party = [
    "pydantic-settings",
]
known_local_folder = [
    "core",
]
src_paths = ["."]
line_length = 85
include_trailing_comma = true
split_on_trailing_comma = true
skip = [".gitignore"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.project.settings.local"

[tool.poetry]
name = "parity-test"
version = "0.1.0"
description = ""
authors = ["Ivan Novozhilov <inovozhilov98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.2"
pydantic-settings = "^2.6.1"
psycopg2-binary = "^2.9.10"
punq = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.4"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
